working on editor splitting.